terraform/environments/example/rds.tf
###########################################################################################
#------------------------Comment out file if not required----------------------------------
###########################################################################################

# Example code to build an RDS database - based on mysql but could be :
# Amazon Aurora, PostgreSQL, MariaDB, Oracle, MicroSoft SQL Server. These will require the correct version
# The local.application_data is picked from local but set up in application_variables.json
# Set these up in there and make sure the local points to that location


 resource "aws_db_instance" "example-rds" {
   #checkov:skip=CKV_AWS_118: "enhanced monitoring is enabled, but optional"
   #checkov:skip=CKV_AWS_157: "multi-az enabled, but optional"
   #checkov:skip=CKV_AWS_133: "backup_retention enabled, can be edited it application_variables.json"
   #checkov:skip=CKV_AWS_161: "iam auth enabled, but optional"
   #checkov:skip=CKV_AWS_293: "Deletion protection not required for example"
   #checkov:skip=CKV_AWS_354: "Performance insights don't need encryption for example"
   engine                     = "mysql"
   engine_version             = "5.7"
   auto_minor_version_upgrade = true
   instance_class             = local.application_data.accounts[local.environment].db_instance_class
   db_name                    = "${local.application_name}${local.environment}database"
   identifier                 = "${local.application_name}-${local.environment}-database"
   username                   = local.application_data.accounts[local.environment].db_user
   password                   = aws_secretsmanager_secret_version.db_password.secret_string
   # tflint-ignore: aws_db_instance_default_parameter_group
   parameter_group_name                = "default.mysql5.7"
   skip_final_snapshot                 = local.application_data.accounts[local.environment].skip_final_snapshot
   allocated_storage                   = local.application_data.accounts[local.environment].db_allocated_storage
   max_allocated_storage               = local.application_data.accounts[local.environment].db_max_allocated_storage
   maintenance_window                  = local.application_data.accounts[local.environment].maintenance_window
   allow_major_version_upgrade         = local.application_data.accounts[local.environment].allow_major_version_upgrade
   backup_window                       = local.application_data.accounts[local.environment].backup_window
   backup_retention_period             = local.application_data.accounts[local.environment].retention_period
   iam_database_authentication_enabled = local.application_data.accounts[local.environment].db_iam_database_authentication_enabled
   multi_az                            = local.application_data.accounts[local.environment].db_multi_az
   monitoring_interval                 = local.application_data.accounts[local.environment].db_monitoring_interval
   monitoring_role_arn                 = local.application_data.accounts[local.environment].db_monitoring_interval == 0 ? "" : aws_iam_role.rds_enhanced_monitoring[0].arn
   storage_encrypted                   = true
   db_subnet_group_name                = aws_db_subnet_group.example.name
   vpc_security_group_ids              = [aws_security_group.rds-example.id]
   performance_insights_enabled        = local.application_data.accounts[local.environment].db_performance_insights_enabled
   performance_insights_kms_key_id     = "" #tfsec:ignore:aws-rds-enable-performance-insights-encryption Left empty so that it will run, however should be populated with real key in scenario.
   enabled_cloudwatch_logs_exports     = local.application_data.accounts[local.environment].db_enabled_cloudwatch_logs_exports
   tags = merge(local.tags,
     { Name = lower(format("%s-%s-example", local.application_name, local.environment)) },
     { instance-scheduling = "skip-scheduling" } # This is now managed by the flexible shutdown & startup workflow.
   )
 }
 resource "aws_db_subnet_group" "example" {
   name       = "data"
   subnet_ids = data.aws_subnets.shared-data.ids
   tags = local.tags
 }
 resource "aws_security_group" "rds-example" {
   description = "RDS Security Group"
   vpc_id      = data.aws_vpc.shared.id
 }
 resource "aws_security_group_rule" "rds_example_ingress_cp3_octo_nonlive" {
   description              = "container-platform-octo-nonlive nodes"
   type                     = "ingress"
   from_port                = 3306
   to_port                  = 3306
   protocol                 = "tcp"
   security_group_id        = aws_security_group.rds-example.id
   cidr_blocks              = ["10.195.48.0/20"]
 }
 resource "aws_iam_role" "rds_enhanced_monitoring" {
   assume_role_policy = data.aws_iam_policy_document.rds_enhanced_monitoring[0].json
   count              = local.application_data.accounts[local.environment].db_monitoring_interval == 0 ? 0 : 1
   name_prefix        = "rds-enhanced-monitoring"
 }
 resource "aws_iam_role_policy_attachment" "rds_enhanced_monitoring" {
   count      = local.application_data.accounts[local.environment].db_monitoring_interval == 0 ? 0 : 1
   policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole"
   role       = aws_iam_role.rds_enhanced_monitoring[0].name
 }
 data "aws_iam_policy_document" "rds_enhanced_monitoring" {
   count = local.application_data.accounts[local.environment].db_monitoring_interval == 0 ? 0 : 1
   statement {
     actions = [
       "sts:AssumeRole",
     ]
     effect = "Allow"
     principals {
       type        = "Service"
       identifiers = ["monitoring.rds.amazonaws.com"]
     }
   }
 }
 #
 #tfsec:ignore:aws-ssm-secret-use-customer-key
 resource "aws_secretsmanager_secret" "db_password" {
   #checkov:skip=CKV_AWS_149
   name                    = "${var.networking[0].application}-db-password"
   recovery_window_in_days = 0
   tags = merge(
     local.tags,
     {
       Name = "${var.networking[0].application}-db-password"
     },
   )
 }
 resource "aws_secretsmanager_secret_version" "db_password" {
   secret_id     = aws_secretsmanager_secret.db_password.id
   secret_string = random_password.random_password.result
 }
 resource "random_password" "random_password" {
   length  = 32
   special = false
 }
